# stock-tracker

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  exemplo_transacoes.csv
backend/: Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_price_targets_and_notes.py  003_add_push_subscriptions.py  004_add_received_dividends.py
backend/app/: main.py
backend/app/api/: __init__.py  alerts.py  dividends.py  fundamentals.py  health.py  news.py  notifications.py  portfolio.py  quotes.py  stocks.py
backend/app/collectors/: base.py  price_collector.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  alert.py  dividend.py  fundamental.py  news.py  portfolio.py  push_subscription.py  quote.py  received_dividend.py  stock.py
backend/app/schemas/: __init__.py  fundamental.py  portfolio.py  push_subscription.py  received_dividend.py  stock.py
backend/app/services/: benchmark_service.py  dividend_service.py  history_service.py  import_service.py  news_service.py  portfolio_service.py  quote_service.py  seed.py  web_push_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/dev-dist/: sw.js
frontend/src/: App.vue  main.ts  sw.ts
frontend/src/assets/: main.css
frontend/src/components/: AddDividendModal.vue  AddTransactionModal.vue  ConfirmModal.vue  ImportTransactionsModal.vue  Navbar.vue  StockCard.vue  (+1 more)
(+16 files in other folders)
